# astro-virtual-lab

./: .gitignore  README.md  pyproject.toml
examples/: galactic_archaeology.py
meeting_outputs/: discussion.json  discussion.md  ml_analysis.json  ml_analysis.md
src/astro_virtual_lab/: __about__.py  __init__.py  agent.py  clients.py  config.py  config.yml.template  constants.py  prompts.py  run_meeting.py  utils.py
